parser.output
Terminais sem uso na gramática

   ESP
   NL
   ERRO
   FIM


Estado 106 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 programa: declaracao_lista

    2 declaracao_lista: declaracao_lista declaracao
    3                 | declaracao

    4 declaracao: var_declaracao
    5           | fun_declaracao

    6 var_declaracao: tipo_especificador id PV
    7               | tipo_especificador id ACOL vet_num FCOL PV

    8 vet_num: NUM

    9 fun_declaracao: tipo_especificador id APR params FPR composto_decl

   10 tipo_especificador: INT
   11                   | VOID

   12 params: param_lista
   13       | VOID

   14 param_lista: param_lista VIRG param
   15            | param

   16 param: tipo_especificador id
   17      | tipo_especificador id ACOL FCOL

   18 composto_decl: ACH local_declaracao statement_lista FCH
   19              | ACH local_declaracao FCH
   20              | ACH statement_lista FCH
   21              | ACH FCH

   22 local_declaracao: local_declaracao var_declaracao
   23                 | var_declaracao

   24 statement_lista: statement_lista statement
   25                | statement

   26 statement: expressao_decl
   27          | composto_decl
   28          | selecao_decl
   29          | iteracao_decl
   30          | retorno_decl

   31 expressao_decl: expressao PV
   32               | PV

   33 selecao_decl: IF APR expressao FPR statement
   34             | IF APR expressao FPR statement ELSE statement

   35 iteracao_decl: WHILE APR expressao FPR statement

   36 retorno_decl: RETURN PV
   37             | RETURN expressao PV

   38 expressao: var ATRIB expressao
   39          | simples_expressao

   40 var: id
   41    | id ACOL expressao FCOL

   42 simples_expressao: soma_expressao relacional soma_expressao
   43                  | soma_expressao

   44 relacional: MEIGL
   45           | MEN
   46           | MAI
   47           | MAIGL
   48           | IGL
   49           | DIF

   50 soma_expressao: soma_expressao soma termo
   51               | termo

   52 soma: SOMA
   53     | SUB

   54 termo: termo mult fator
   55      | fator

   56 mult: MUL
   57     | DIV

   58 fator: APR expressao FPR
   59      | var
   60      | ativacao
   61      | NUM

   62 ativacao: id APR args FPR
   63         | id APR FPR

   64 args: arg_lista

   65 arg_lista: arg_lista VIRG expressao
   66          | expressao

   67 id: ID


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
VOID (258) 11 13
INT (259) 10
IF (260) 33 34
ELSE (261) 34
WHILE (262) 35
RETURN (263) 36 37
SOMA (264) 52
SUB (265) 53
MUL (266) 56
DIV (267) 57
APR (268) 9 33 34 35 58 62 63
FPR (269) 9 33 34 35 58 62 63
NUM (270) 8 61
ESP (271)
ID (272) 67
ACOL (273) 7 17 41
FCOL (274) 7 17 41
ACH (275) 18 19 20 21
FCH (276) 18 19 20 21
ATRIB (277) 38
IGL (278) 48
DIF (279) 49
MAIGL (280) 47
MEIGL (281) 44
MAI (282) 46
MEN (283) 45
VIRG (284) 14 65
PV (285) 6 7 31 32 36 37
NL (286)
ERRO (287)
FIM (288)


Não terminais com as regras onde eles aparecem

$accept (34)
    à esquerda: 0
programa (35)
    à esquerda: 1, à direita: 0
declaracao_lista (36)
    à esquerda: 2 3, à direita: 1 2
declaracao (37)
    à esquerda: 4 5, à direita: 2 3
var_declaracao (38)
    à esquerda: 6 7, à direita: 4 22 23
vet_num (39)
    à esquerda: 8, à direita: 7
fun_declaracao (40)
    à esquerda: 9, à direita: 5
tipo_especificador (41)
    à esquerda: 10 11, à direita: 6 7 9 16 17
params (42)
    à esquerda: 12 13, à direita: 9
param_lista (43)
    à esquerda: 14 15, à direita: 12 14
param (44)
    à esquerda: 16 17, à direita: 14 15
composto_decl (45)
    à esquerda: 18 19 20 21, à direita: 9 27
local_declaracao (46)
    à esquerda: 22 23, à direita: 18 19 22
statement_lista (47)
    à esquerda: 24 25, à direita: 18 20 24
statement (48)
    à esquerda: 26 27 28 29 30, à direita: 24 25 33 34 35
expressao_decl (49)
    à esquerda: 31 32, à direita: 26
selecao_decl (50)
    à esquerda: 33 34, à direita: 28
iteracao_decl (51)
    à esquerda: 35, à direita: 29
retorno_decl (52)
    à esquerda: 36 37, à direita: 30
expressao (53)
    à esquerda: 38 39, à direita: 31 33 34 35 37 38 41 58 65 66
var (54)
    à esquerda: 40 41, à direita: 38 59
simples_expressao (55)
    à esquerda: 42 43, à direita: 39
relacional (56)
    à esquerda: 44 45 46 47 48 49, à direita: 42
soma_expressao (57)
    à esquerda: 50 51, à direita: 42 43 50
soma (58)
    à esquerda: 52 53, à direita: 50
termo (59)
    à esquerda: 54 55, à direita: 50 51 54
mult (60)
    à esquerda: 56 57, à direita: 54
fator (61)
    à esquerda: 58 59 60 61, à direita: 54 55
ativacao (62)
    à esquerda: 62 63, à direita: 60
args (63)
    à esquerda: 64, à direita: 62
arg_lista (64)
    à esquerda: 65 66, à direita: 64 65
id (65)
    à esquerda: 67, à direita: 6 7 9 16 17 40 41 62 63


Estado 0

    0 $accept: . programa $end

    VOID  deslocar, e ir ao estado 1
    INT   deslocar, e ir ao estado 2

    programa            ir ao estado 3
    declaracao_lista    ir ao estado 4
    declaracao          ir ao estado 5
    var_declaracao      ir ao estado 6
    fun_declaracao      ir ao estado 7
    tipo_especificador  ir ao estado 8


Estado 1

   11 tipo_especificador: VOID .

    $padrão  reduzir usando a regra 11 (tipo_especificador)


Estado 2

   10 tipo_especificador: INT .

    $padrão  reduzir usando a regra 10 (tipo_especificador)


Estado 3

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 9


Estado 4

    1 programa: declaracao_lista .
    2 declaracao_lista: declaracao_lista . declaracao

    VOID  deslocar, e ir ao estado 1
    INT   deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 1 (programa)

    declaracao          ir ao estado 10
    var_declaracao      ir ao estado 6
    fun_declaracao      ir ao estado 7
    tipo_especificador  ir ao estado 8


Estado 5

    3 declaracao_lista: declaracao .

    $padrão  reduzir usando a regra 3 (declaracao_lista)


Estado 6

    4 declaracao: var_declaracao .

    $padrão  reduzir usando a regra 4 (declaracao)


Estado 7

    5 declaracao: fun_declaracao .

    $padrão  reduzir usando a regra 5 (declaracao)


Estado 8

    6 var_declaracao: tipo_especificador . id PV
    7               | tipo_especificador . id ACOL vet_num FCOL PV
    9 fun_declaracao: tipo_especificador . id APR params FPR composto_decl

    ID  deslocar, e ir ao estado 11

    id  ir ao estado 12


Estado 9

    0 $accept: programa $end .

    $padrão  aceitar


Estado 10

    2 declaracao_lista: declaracao_lista declaracao .

    $padrão  reduzir usando a regra 2 (declaracao_lista)


Estado 11

   67 id: ID .

    $padrão  reduzir usando a regra 67 (id)


Estado 12

    6 var_declaracao: tipo_especificador id . PV
    7               | tipo_especificador id . ACOL vet_num FCOL PV
    9 fun_declaracao: tipo_especificador id . APR params FPR composto_decl

    APR   deslocar, e ir ao estado 13
    ACOL  deslocar, e ir ao estado 14
    PV    deslocar, e ir ao estado 15


Estado 13

    9 fun_declaracao: tipo_especificador id APR . params FPR composto_decl

    VOID  deslocar, e ir ao estado 16
    INT   deslocar, e ir ao estado 2

    tipo_especificador  ir ao estado 17
    params              ir ao estado 18
    param_lista         ir ao estado 19
    param               ir ao estado 20


Estado 14

    7 var_declaracao: tipo_especificador id ACOL . vet_num FCOL PV

    NUM  deslocar, e ir ao estado 21

    vet_num  ir ao estado 22


Estado 15

    6 var_declaracao: tipo_especificador id PV .

    $padrão  reduzir usando a regra 6 (var_declaracao)


Estado 16

   11 tipo_especificador: VOID .
   13 params: VOID .

    FPR       reduzir usando a regra 13 (params)
    $padrão  reduzir usando a regra 11 (tipo_especificador)


Estado 17

   16 param: tipo_especificador . id
   17      | tipo_especificador . id ACOL FCOL

    ID  deslocar, e ir ao estado 11

    id  ir ao estado 23


Estado 18

    9 fun_declaracao: tipo_especificador id APR params . FPR composto_decl

    FPR  deslocar, e ir ao estado 24


Estado 19

   12 params: param_lista .
   14 param_lista: param_lista . VIRG param

    VIRG  deslocar, e ir ao estado 25

    $padrão  reduzir usando a regra 12 (params)


Estado 20

   15 param_lista: param .

    $padrão  reduzir usando a regra 15 (param_lista)


Estado 21

    8 vet_num: NUM .

    $padrão  reduzir usando a regra 8 (vet_num)


Estado 22

    7 var_declaracao: tipo_especificador id ACOL vet_num . FCOL PV

    FCOL  deslocar, e ir ao estado 26


Estado 23

   16 param: tipo_especificador id .
   17      | tipo_especificador id . ACOL FCOL

    ACOL  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 16 (param)


Estado 24

    9 fun_declaracao: tipo_especificador id APR params FPR . composto_decl

    ACH  deslocar, e ir ao estado 28

    composto_decl  ir ao estado 29


Estado 25

   14 param_lista: param_lista VIRG . param

    VOID  deslocar, e ir ao estado 1
    INT   deslocar, e ir ao estado 2

    tipo_especificador  ir ao estado 17
    param               ir ao estado 30


Estado 26

    7 var_declaracao: tipo_especificador id ACOL vet_num FCOL . PV

    PV  deslocar, e ir ao estado 31


Estado 27

   17 param: tipo_especificador id ACOL . FCOL

    FCOL  deslocar, e ir ao estado 32


Estado 28

   18 composto_decl: ACH . local_declaracao statement_lista FCH
   19              | ACH . local_declaracao FCH
   20              | ACH . statement_lista FCH
   21              | ACH . FCH

    VOID    deslocar, e ir ao estado 1
    INT     deslocar, e ir ao estado 2
    IF      deslocar, e ir ao estado 33
    WHILE   deslocar, e ir ao estado 34
    RETURN  deslocar, e ir ao estado 35
    APR     deslocar, e ir ao estado 36
    NUM     deslocar, e ir ao estado 37
    ID      deslocar, e ir ao estado 11
    ACH     deslocar, e ir ao estado 28
    FCH     deslocar, e ir ao estado 38
    PV      deslocar, e ir ao estado 39

    var_declaracao      ir ao estado 40
    tipo_especificador  ir ao estado 41
    composto_decl       ir ao estado 42
    local_declaracao    ir ao estado 43
    statement_lista     ir ao estado 44
    statement           ir ao estado 45
    expressao_decl      ir ao estado 46
    selecao_decl        ir ao estado 47
    iteracao_decl       ir ao estado 48
    retorno_decl        ir ao estado 49
    expressao           ir ao estado 50
    var                 ir ao estado 51
    simples_expressao   ir ao estado 52
    soma_expressao      ir ao estado 53
    termo               ir ao estado 54
    fator               ir ao estado 55
    ativacao            ir ao estado 56
    id                  ir ao estado 57


Estado 29

    9 fun_declaracao: tipo_especificador id APR params FPR composto_decl .

    $padrão  reduzir usando a regra 9 (fun_declaracao)


Estado 30

   14 param_lista: param_lista VIRG param .

    $padrão  reduzir usando a regra 14 (param_lista)


Estado 31

    7 var_declaracao: tipo_especificador id ACOL vet_num FCOL PV .

    $padrão  reduzir usando a regra 7 (var_declaracao)


Estado 32

   17 param: tipo_especificador id ACOL FCOL .

    $padrão  reduzir usando a regra 17 (param)


Estado 33

   33 selecao_decl: IF . APR expressao FPR statement
   34             | IF . APR expressao FPR statement ELSE statement

    APR  deslocar, e ir ao estado 58


Estado 34

   35 iteracao_decl: WHILE . APR expressao FPR statement

    APR  deslocar, e ir ao estado 59


Estado 35

   36 retorno_decl: RETURN . PV
   37             | RETURN . expressao PV

    APR  deslocar, e ir ao estado 36
    NUM  deslocar, e ir ao estado 37
    ID   deslocar, e ir ao estado 11
    PV   deslocar, e ir ao estado 60

    expressao          ir ao estado 61
    var                ir ao estado 51
    simples_expressao  ir ao estado 52
    soma_expressao     ir ao estado 53
    termo              ir ao estado 54
    fator              ir ao estado 55
    ativacao           ir ao estado 56
    id                 ir ao estado 57


Estado 36

   58 fator: APR . expressao FPR

    APR  deslocar, e ir ao estado 36
    NUM  deslocar, e ir ao estado 37
    ID   deslocar, e ir ao estado 11

    expressao          ir ao estado 62
    var                ir ao estado 51
    simples_expressao  ir ao estado 52
    soma_expressao     ir ao estado 53
    termo              ir ao estado 54
    fator              ir ao estado 55
    ativacao           ir ao estado 56
    id                 ir ao estado 57


Estado 37

   61 fator: NUM .

    $padrão  reduzir usando a regra 61 (fator)


Estado 38

   21 composto_decl: ACH FCH .

    $padrão  reduzir usando a regra 21 (composto_decl)


Estado 39

   32 expressao_decl: PV .

    $padrão  reduzir usando a regra 32 (expressao_decl)


Estado 40

   23 local_declaracao: var_declaracao .

    $padrão  reduzir usando a regra 23 (local_declaracao)


Estado 41

    6 var_declaracao: tipo_especificador . id PV
    7               | tipo_especificador . id ACOL vet_num FCOL PV

    ID  deslocar, e ir ao estado 11

    id  ir ao estado 63


Estado 42

   27 statement: composto_decl .

    $padrão  reduzir usando a regra 27 (statement)


Estado 43

   18 composto_decl: ACH local_declaracao . statement_lista FCH
   19              | ACH local_declaracao . FCH
   22 local_declaracao: local_declaracao . var_declaracao

    VOID    deslocar, e ir ao estado 1
    INT     deslocar, e ir ao estado 2
    IF      deslocar, e ir ao estado 33
    WHILE   deslocar, e ir ao estado 34
    RETURN  deslocar, e ir ao estado 35
    APR     deslocar, e ir ao estado 36
    NUM     deslocar, e ir ao estado 37
    ID      deslocar, e ir ao estado 11
    ACH     deslocar, e ir ao estado 28
    FCH     deslocar, e ir ao estado 64
    PV      deslocar, e ir ao estado 39

    var_declaracao      ir ao estado 65
    tipo_especificador  ir ao estado 41
    composto_decl       ir ao estado 42
    statement_lista     ir ao estado 66
    statement           ir ao estado 45
    expressao_decl      ir ao estado 46
    selecao_decl        ir ao estado 47
    iteracao_decl       ir ao estado 48
    retorno_decl        ir ao estado 49
    expressao           ir ao estado 50
    var                 ir ao estado 51
    simples_expressao   ir ao estado 52
    soma_expressao      ir ao estado 53
    termo               ir ao estado 54
    fator               ir ao estado 55
    ativacao            ir ao estado 56
    id                  ir ao estado 57


Estado 44

   20 composto_decl: ACH statement_lista . FCH
   24 statement_lista: statement_lista . statement

    IF      deslocar, e ir ao estado 33
    WHILE   deslocar, e ir ao estado 34
    RETURN  deslocar, e ir ao estado 35
    APR     deslocar, e ir ao estado 36
    NUM     deslocar, e ir ao estado 37
    ID      deslocar, e ir ao estado 11
    ACH     deslocar, e ir ao estado 28
    FCH     deslocar, e ir ao estado 67
    PV      deslocar, e ir ao estado 39

    composto_decl      ir ao estado 42
    statement          ir ao estado 68
    expressao_decl     ir ao estado 46
    selecao_decl       ir ao estado 47
    iteracao_decl      ir ao estado 48
    retorno_decl       ir ao estado 49
    expressao          ir ao estado 50
    var                ir ao estado 51
    simples_expressao  ir ao estado 52
    soma_expressao     ir ao estado 53
    termo              ir ao estado 54
    fator              ir ao estado 55
    ativacao           ir ao estado 56
    id                 ir ao estado 57


Estado 45

   25 statement_lista: statement .

    $padrão  reduzir usando a regra 25 (statement_lista)


Estado 46

   26 statement: expressao_decl .

    $padrão  reduzir usando a regra 26 (statement)


Estado 47

   28 statement: selecao_decl .

    $padrão  reduzir usando a regra 28 (statement)


Estado 48

   29 statement: iteracao_decl .

    $padrão  reduzir usando a regra 29 (statement)


Estado 49

   30 statement: retorno_decl .

    $padrão  reduzir usando a regra 30 (statement)


Estado 50

   31 expressao_decl: expressao . PV

    PV  deslocar, e ir ao estado 69


Estado 51

   38 expressao: var . ATRIB expressao
   59 fator: var .

    ATRIB  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 59 (fator)


Estado 52

   39 expressao: simples_expressao .

    $padrão  reduzir usando a regra 39 (expressao)


Estado 53

   42 simples_expressao: soma_expressao . relacional soma_expressao
   43                  | soma_expressao .
   50 soma_expressao: soma_expressao . soma termo

    SOMA   deslocar, e ir ao estado 71
    SUB    deslocar, e ir ao estado 72
    IGL    deslocar, e ir ao estado 73
    DIF    deslocar, e ir ao estado 74
    MAIGL  deslocar, e ir ao estado 75
    MEIGL  deslocar, e ir ao estado 76
    MAI    deslocar, e ir ao estado 77
    MEN    deslocar, e ir ao estado 78

    $padrão  reduzir usando a regra 43 (simples_expressao)

    relacional  ir ao estado 79
    soma        ir ao estado 80


Estado 54

   51 soma_expressao: termo .
   54 termo: termo . mult fator

    MUL  deslocar, e ir ao estado 81
    DIV  deslocar, e ir ao estado 82

    $padrão  reduzir usando a regra 51 (soma_expressao)

    mult  ir ao estado 83


Estado 55

   55 termo: fator .

    $padrão  reduzir usando a regra 55 (termo)


Estado 56

   60 fator: ativacao .

    $padrão  reduzir usando a regra 60 (fator)


Estado 57

   40 var: id .
   41    | id . ACOL expressao FCOL
   62 ativacao: id . APR args FPR
   63         | id . APR FPR

    APR   deslocar, e ir ao estado 84
    ACOL  deslocar, e ir ao estado 85

    $padrão  reduzir usando a regra 40 (var)


Estado 58

   33 selecao_decl: IF APR . expressao FPR statement
   34             | IF APR . expressao FPR statement ELSE statement

    APR  deslocar, e ir ao estado 36
    NUM  deslocar, e ir ao estado 37
    ID   deslocar, e ir ao estado 11

    expressao          ir ao estado 86
    var                ir ao estado 51
    simples_expressao  ir ao estado 52
    soma_expressao     ir ao estado 53
    termo              ir ao estado 54
    fator              ir ao estado 55
    ativacao           ir ao estado 56
    id                 ir ao estado 57


Estado 59

   35 iteracao_decl: WHILE APR . expressao FPR statement

    APR  deslocar, e ir ao estado 36
    NUM  deslocar, e ir ao estado 37
    ID   deslocar, e ir ao estado 11

    expressao          ir ao estado 87
    var                ir ao estado 51
    simples_expressao  ir ao estado 52
    soma_expressao     ir ao estado 53
    termo              ir ao estado 54
    fator              ir ao estado 55
    ativacao           ir ao estado 56
    id                 ir ao estado 57


Estado 60

   36 retorno_decl: RETURN PV .

    $padrão  reduzir usando a regra 36 (retorno_decl)


Estado 61

   37 retorno_decl: RETURN expressao . PV

    PV  deslocar, e ir ao estado 88


Estado 62

   58 fator: APR expressao . FPR

    FPR  deslocar, e ir ao estado 89


Estado 63

    6 var_declaracao: tipo_especificador id . PV
    7               | tipo_especificador id . ACOL vet_num FCOL PV

    ACOL  deslocar, e ir ao estado 14
    PV    deslocar, e ir ao estado 15


Estado 64

   19 composto_decl: ACH local_declaracao FCH .

    $padrão  reduzir usando a regra 19 (composto_decl)


Estado 65

   22 local_declaracao: local_declaracao var_declaracao .

    $padrão  reduzir usando a regra 22 (local_declaracao)


Estado 66

   18 composto_decl: ACH local_declaracao statement_lista . FCH
   24 statement_lista: statement_lista . statement

    IF      deslocar, e ir ao estado 33
    WHILE   deslocar, e ir ao estado 34
    RETURN  deslocar, e ir ao estado 35
    APR     deslocar, e ir ao estado 36
    NUM     deslocar, e ir ao estado 37
    ID      deslocar, e ir ao estado 11
    ACH     deslocar, e ir ao estado 28
    FCH     deslocar, e ir ao estado 90
    PV      deslocar, e ir ao estado 39

    composto_decl      ir ao estado 42
    statement          ir ao estado 68
    expressao_decl     ir ao estado 46
    selecao_decl       ir ao estado 47
    iteracao_decl      ir ao estado 48
    retorno_decl       ir ao estado 49
    expressao          ir ao estado 50
    var                ir ao estado 51
    simples_expressao  ir ao estado 52
    soma_expressao     ir ao estado 53
    termo              ir ao estado 54
    fator              ir ao estado 55
    ativacao           ir ao estado 56
    id                 ir ao estado 57


Estado 67

   20 composto_decl: ACH statement_lista FCH .

    $padrão  reduzir usando a regra 20 (composto_decl)


Estado 68

   24 statement_lista: statement_lista statement .

    $padrão  reduzir usando a regra 24 (statement_lista)


Estado 69

   31 expressao_decl: expressao PV .

    $padrão  reduzir usando a regra 31 (expressao_decl)


Estado 70

   38 expressao: var ATRIB . expressao

    APR  deslocar, e ir ao estado 36
    NUM  deslocar, e ir ao estado 37
    ID   deslocar, e ir ao estado 11

    expressao          ir ao estado 91
    var                ir ao estado 51
    simples_expressao  ir ao estado 52
    soma_expressao     ir ao estado 53
    termo              ir ao estado 54
    fator              ir ao estado 55
    ativacao           ir ao estado 56
    id                 ir ao estado 57


Estado 71

   52 soma: SOMA .

    $padrão  reduzir usando a regra 52 (soma)


Estado 72

   53 soma: SUB .

    $padrão  reduzir usando a regra 53 (soma)


Estado 73

   48 relacional: IGL .

    $padrão  reduzir usando a regra 48 (relacional)


Estado 74

   49 relacional: DIF .

    $padrão  reduzir usando a regra 49 (relacional)


Estado 75

   47 relacional: MAIGL .

    $padrão  reduzir usando a regra 47 (relacional)


Estado 76

   44 relacional: MEIGL .

    $padrão  reduzir usando a regra 44 (relacional)


Estado 77

   46 relacional: MAI .

    $padrão  reduzir usando a regra 46 (relacional)


Estado 78

   45 relacional: MEN .

    $padrão  reduzir usando a regra 45 (relacional)


Estado 79

   42 simples_expressao: soma_expressao relacional . soma_expressao

    APR  deslocar, e ir ao estado 36
    NUM  deslocar, e ir ao estado 37
    ID   deslocar, e ir ao estado 11

    var             ir ao estado 92
    soma_expressao  ir ao estado 93
    termo           ir ao estado 54
    fator           ir ao estado 55
    ativacao        ir ao estado 56
    id              ir ao estado 57


Estado 80

   50 soma_expressao: soma_expressao soma . termo

    APR  deslocar, e ir ao estado 36
    NUM  deslocar, e ir ao estado 37
    ID   deslocar, e ir ao estado 11
